ALigne les tabs de fixed jobs

--- a/blocks/fixed-jobs/fixed-jobs.css
+++ b/blocks/fixed-jobs/fixed-jobs.css
@@ -146,6 +146,9 @@
 	border-radius: 1rem;
 	margin: .5rem;
 	justify-content: center;
+  flex-direction: column;
+            width: 100%;
+            align-items: center;
 
       .fixed-jobs-tab {
         padding: 0.5rem 0.75rem;
